{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerController",
            "id": "c35657e5-dfc1-4360-9651-63123f2eb1c7",
            "actions": [
                {
                    "name": "Movimentar",
                    "type": "Value",
                    "id": "5469b604-6ae9-4470-81c3-590bafd61524",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pular",
                    "type": "Button",
                    "id": "d26ef497-0c5c-41e7-a852-8e81b25e9006",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Atacar",
                    "type": "Button",
                    "id": "fa4982f4-63e3-4ca9-a6c8-2a9b971288bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "026273b2-9a6f-481c-bd86-84bd70a7dba8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimentar",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ec190101-80a7-4e6a-87f8-fe9cefa3cd7a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0075eaad-5732-4a68-bf17-75773848c4d8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fdc4fe74-f152-4ec2-98eb-7407bd5993c2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bcb69e3c-b198-43bc-b093-11c50e5148df",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "setas",
                    "id": "32c9d805-e8c1-4385-823b-144fa38160ff",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimentar",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c601245e-beaf-488f-8d37-f2964c43d136",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fa21cab6-eebc-4e65-8a84-0b335a633eff",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f76569cc-9dcc-47fa-a1d8-b09de16977d9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "28b9c6e7-c2b8-4faa-a423-5d5fba06abbe",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "D-pad",
                    "id": "bd8573ea-cb22-492d-b1b3-0599ba225f9e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimentar",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f91ecaf7-e24a-4678-96f2-5362f9dcbe4a",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controle",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "04b22bfb-04da-4d75-88dc-764c36fcce4c",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controle",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "35308be3-66c5-426f-bb77-ca27a5495a95",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controle",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b595be38-cf2a-4503-822b-6c34e301ca76",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controle",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7d2eb54c-40c9-4ebd-b3d9-ecaf6a2a8517",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controle",
                    "action": "Movimentar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62c5a09a-6821-479e-af44-f96c8b93ea78",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Pular",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffa20ccd-e29b-46fc-b939-5967ae2f8754",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controle",
                    "action": "Pular",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b5e3c8c-d796-4df2-8d4b-cc8fc15a66d6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Atacar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59a9f016-c0c6-49d6-a66e-317c841bcdce",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado e Mouse",
                    "action": "Atacar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b1962e9-d7f9-4e03-87ab-c8ea0d61bc7f",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controle",
                    "action": "Atacar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Teclado e Mouse",
            "bindingGroup": "Teclado e Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controle",
            "bindingGroup": "Controle",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}